--- a/index.html
+++ b/index.html
@@ -48,6 +48,13 @@
                     Your results will show here
                 </div>
             </div>
+
+            <div class = "features-section">
+               <h2> Why choose iValidateE ? </h2>
+
+               
+            </div>
+ 
         </main>
         <footer>
             <p class="text-[#5c778a] text-base font-normal leading-normal">&#169;2025 Copyright E-Validate.com | All Rights Reserved</p> 
