--- a/index.html
+++ b/index.html
@@ -52,7 +52,13 @@
             <div class = "features-section">
                <h2> Why choose iValidateE ? </h2>
 
+                <div class = "features-list">
                
+                <div class = "feature-box"> <b> Validates syntax and domain instantly </b></div>
+                <div class = "feature-box"> <b> Detects disposable email addresses </b></div>
+                <div class = "feature-box"> <b> Privacy-focused (we never store your emails !) </b> </div>
+
+               </div>
             </div>
  
         </main>
