--- a/about.html
+++ b/about.html
@@ -7,6 +7,14 @@
     <link rel="stylesheet" href="about.css">
 </head>
 <body>
+    <div class = "about-container">
+
+        <h1>About Us</h1>
+
+        <p>Welcome to <span class ="highlight" >iValidateE</span> - your reliable, real-time email validation solution. Our goal is to make email verification simple, fast, and secure for individuals, developers, and businesses.</p>
+
+        <p>iValidate is built to help solve a common problem (that is not so common in the world) : users entering fake or invalid email addresses.</p>
+    </div>
     
 </body>
 </html>
