--- a/about.html
+++ b/about.html
@@ -27,6 +27,8 @@
       Thank you for using iValidateE. We're glad you're here!
     </p>
     </div>
+
+    <script src="about.js"> </script>
     
 </body>
 </html>
