--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
                     <img src="" alt="Email SVG">
                     <span>E-Validate</span></div>
                 <ul>
-                    <li> <a href="/">Home</a></li>
-                    <li><a href ="/">About Us</a></li>
-                    <li> <a href ="/"> Contact Us</a></li>
+                    
+                    <li> <a href="index.html">Home</a></li>
+                    <li> <a href ="Contact.html"> Contact Us</a></li>
+                    <li><a href ="about.html">About Us</a></li>
+                    
                 </ul>
             </nav>
         </header>
