--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <header>
             <nav>
                 <div class="logo">
-                    <img src="" alt="Email SVG">
+                    <img src="./assets/reliability.png" alt="reliability icon">
                     <span>E-Validate</span></div>
                 <ul>
                     
