--- a/Contact.html
+++ b/Contact.html
@@ -27,8 +27,13 @@
 
     <button type="submit">Send Message</button>
 </form>
+        
+<p id = "formMessage"></p>
 </div>
 
+<a href ="index.html" class = "back-button"> Back to Home </a>
+
+<script src = "contact.js"></script>
     
 </body>
 </html>
