--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
     <link rel="stylesheet" href="about.css">
+    
 </head>
 <body>
     <div class = "about-container">
@@ -22,6 +23,8 @@
     </div>
 
     <script src="about.js"> </script>
+
+    <a href="index.html" class = "back-button"> Back to Home </a>
     
 </body>
 </html>
